--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "loftschool-example",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "index.hbs",
   "scripts": {
     "codestyle": "eslint src",
     "travis": "npm run codestyle && npm test",
@@ -23,11 +23,12 @@
     "babel-loader": "^8.0.4",
     "clean-webpack-plugin": "^0.1.19",
     "css-loader": "^1.0.1",
-    "mini-css-extract-plugin": "^0.4.4",
     "file-loader": "^2.0.0",
     "handlebars": "^4.0.12",
     "handlebars-loader": "^1.7.0",
     "html-webpack-plugin": "^3.2.0",
+    "mini-css-extract-plugin": "^0.4.4",
+    "nyc": "^15.0.0",
     "style-loader": "^0.23.1",
     "webpack": "^4.25.1",
     "webpack-dev-server": "^3.1.10"
@@ -37,7 +38,7 @@
     "eslint": "^5.8.0",
     "istanbul": "^0.4.5",
     "istanbul-instrumenter-loader": "^3.0.1",
-    "karma": "^3.1.1",
+    "karma": "^4.4.1",
     "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^2.2.0",
     "karma-coverage-istanbul-reporter": "^2.0.4",
